[gd_scene load_steps=11 format=3 uid="uid://bi3eifgwrb5rk"]

[ext_resource type="Script" path="res://double_door/double_door.gd" id="1_1oirf"]
[ext_resource type="PackedScene" uid="uid://c0tmw4il8es7e" path="res://interactable/interactable.tscn" id="2_vwwvf"]
[ext_resource type="Texture2D" uid="uid://cj1wgrt86e28e" path="res://double_door/double_door.png" id="3_uiqul"]
[ext_resource type="Script" path="res://double_door/double_door_steps.gd" id="4_bylaq"]
[ext_resource type="PackedScene" uid="uid://8hpbn1d1vjmb" path="res://interactable/interact_hint.tscn" id="4_rd0su"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bs5w"]
size = Vector2(32, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8tsp"]
atlas = ExtResource("3_uiqul")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj4so"]
atlas = ExtResource("3_uiqul")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jbmpr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8tsp")
}],
"loop": false,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj4so")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2p0ok"]
size = Vector2(32, 13)

[node name="DoubleDoor" type="Node2D"]
script = ExtResource("1_1oirf")

[node name="Interactable" parent="." instance=ExtResource("2_vwwvf")]

[node name="InteractHint" parent="Interactable" instance=ExtResource("4_rd0su")]
position = Vector2(1, -38)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_7bs5w")

[node name="DoorSprite" type="AnimatedSprite2D" parent="Interactable"]
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_jbmpr")
animation = &"closed"

[node name="DoubleDoorSteps" type="Node" parent="Interactable"]
unique_name_in_owner = true
script = ExtResource("4_bylaq")

[node name="FixedCollision" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FixedCollision"]
polygon = PackedVector2Array(-13, 0, -9, -7, -9, -13, -15, -27, -15, 0)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="FixedCollision"]
position = Vector2(24, 0)
polygon = PackedVector2Array(-11, 0, -9, 0, -9, -27, -15, -13, -15, -7)

[node name="DynamicCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DynamicCollision"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_2p0ok")
